fix: new command names and add default servicename

--- a/cfg/command.cfg
+++ b/cfg/command.cfg
@@ -1,6 +1,6 @@
 // https://github.com/linuxmail/icinga2-matrix_notification
 
-object NotificationCommand "Host Alarm by Matrix" {
+object NotificationCommand "matrix-host-notification" {
     import "plugin-notification-command"
     command = [ SysconfDir + "/icinga2/scripts/matrix-host-notification.sh" ]
     arguments += {
@@ -59,7 +59,7 @@ object NotificationCommand "Host Alarm by Matrix" {
 }
 
 
-object NotificationCommand "Service Alarm by Matrix" {
+object NotificationCommand "matrix-service-notification" {
     import "plugin-notification-command"
     command = [ SysconfDir + "/icinga2/scripts/matrix-service-notification.sh" ]
     arguments += {
@@ -127,3 +127,4 @@ object NotificationCommand "Service Alarm by Matrix" {
     vars.notification_serviceoutput = "$service.output$"
     vars.notification_servicestate = "$service.state$"
     vars.notification_type = "$notification.type$"
+    vars.notification_servicename = "$service.name$"
